Mudanças nas pastas 2

--- a/css/perfil.css
+++ b/css/perfil.css
@@ -138,7 +138,7 @@ nav ul li a:hover {
 
 .perfil {
     padding: 20px;
-    background-image: url(/assets/img/banner.png);
+    background-image: url(/img/banner.png);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 20px;
