--- a/css/ajuda.css
+++ b/css/ajuda.css
@@ -12,7 +12,7 @@ body {
     background-color: #f5f5f5;
     line-height: 1.6;
     color: #333;
-    background-image: url(/img/banner.png);
+    background-image: url(img/banner.png);
 }
 
 header {
@@ -125,7 +125,7 @@ nav ul li a:hover {
 
 .ajuda {
     padding: 20px;
-    background-image: url(/img/banner.png);
+    background-image: url(img/banner.png);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 20px;
@@ -371,7 +371,7 @@ footer .newsletter button:hover {
 }
 
 .modal-content {
-    background-image: url(/img/banner.png);
+    background-image: url(img/banner.png);
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
