--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -9,11 +9,9 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
     line-height: 1.6;
     color: #333;
     padding-bottom: 60px;
-    background-image: url(img/banner.png);
 }
 
 header {
@@ -27,7 +25,6 @@ header {
 }
 
 .banner {
-    background: url('img/banner.png') repeat center center/contain;
     margin-top: -95px;
     margin-bottom: -95px;
     color: white;
@@ -120,38 +117,6 @@ nav ul li a:hover {
     display: none;
     font-size: 24px;
     cursor: pointer;
-}
-
-@media (max-width: 768px) {
-    .menu-icon {
-        display: block;
-    }
-
-    nav ul {
-        display: none;
-        flex-direction: column;
-        background-color: #333;
-        width: 100%;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    }
-
-    nav ul li {
-        text-align: center;
-    }
-
-    nav ul.active {
-        display: flex;
-    }
-
-    .dropdown-content {
-        position: relative;
-        top: 0;
-        left: 0;
-        box-shadow: none;
-    }
 }
 
 .carrinho {
@@ -435,34 +400,6 @@ footer .newsletter button:hover {
     transform: translateY(-2px);
 }
 
-@media (max-width: 768px) {
-    footer .footer-container {
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-    }
-
-    footer .left-section,
-    footer .brands-section,
-    footer .newsletter {
-        align-items: center;
-        text-align: center;
-    }
-
-    footer .footer-links {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    footer .brands-logos {
-        gap: 10px;
-    }
-
-    footer .newsletter input[type="email"] {
-        width: 100%;
-    }
-}
-
 .ps {
     color: #e6b800;
 }
@@ -490,7 +427,6 @@ footer .newsletter button:hover {
 }
 
 .modal-content {
-    background-image: url(img/banner.png);
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -498,18 +434,6 @@ footer .newsletter button:hover {
     max-width: 400px;
     text-align: center;
     animation: fadeIn 0.3s ease-in-out;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(-20px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
 }
 
 .close {
@@ -633,32 +557,6 @@ footer .newsletter button:hover {
     border-color: #4CAF50;
 }
 
-@media (max-width: 768px) {
-    .modal-content {
-        width: 95%;
-        padding: 20px;
-    }
-
-    .tab-link {
-        padding: 8px 16px;
-        font-size: 1em;
-    }
-
-    .tab-content h2 {
-        font-size: 1.3em;
-    }
-
-    .tab-content input {
-        padding: 8px;
-        font-size: 0.9em;
-    }
-
-    .tab-content button {
-        padding: 8px 16px;
-        font-size: 0.9em;
-    }
-}
-
 .close {
     color: #aaa;
     float: right;
@@ -688,25 +586,177 @@ footer .newsletter button:hover {
     transform: translateY(-2px);
 }
 
-@media (max-width: 480px) {
+/*Responsividade*/
+@media (max-width: 768px) {
+    .menu-icon {
+        display: block;
+    }
+
+    nav ul {
+        display: none;
+        flex-direction: column;
+        background-color: #333;
+        width: 100%;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    nav ul li {
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    nav ul.active {
+        display: flex;
+    }
+
+    .dropdown-content {
+        position: relative;
+        top: 0;
+        left: 0;
+        box-shadow: none;
+    }
+
+    .logo-img {
+        display: flex;
+        width: 60%;
+        margin-left: 36px;        
+    }
+
+    .menu-compras {
+        font-size: 11px;
+    }
+
+    .texto-calcular{
+        display: none;
+    }
+
+    .botao-compra{
+        display: flex;
+        margin-left: 50px;
+    }
+    
+    .calculo-frete input[type="text"] {
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid #ddd;
+        width: 130px;
+        font-size: 1em;
+        transition: border-color 0.3s ease, box-shadow 0.3s ease;
+    }
+    
+    .calculo-frete input[type="text"]:focus {
+        border-color: #333;
+        box-shadow: 0 0 5px rgba(51, 51, 51, 0.3);
+        outline: none;
+    }
+
+    .calculo-frete button {
+        padding: 10px 10px;
+        border-radius: 5px;
+        border: none;
+        background-color: #333;
+        color: white;
+        font-size: 1em;
+        cursor: pointer;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+    
+    .modal-content {
+        width: 95%;
+        padding: 20px;
+    }
+    
+    .tab-link {
+        padding: 8px 16px;
+        font-size: 1em;
+    }
+    
+    .tab-content h2 {
+        font-size: 1.3em;
+    }
+    
+    .tab-content input {
+        padding: 8px;
+        font-size: 0.9em;
+    }
+    
+    .tab-content button {
+        padding: 8px 16px;
+        font-size: 0.9em;
+    }
+    
     .faq {
         margin: 10px;
         margin-bottom: 150px;
     }
-
+    
     .pergunta h2 {
         font-size: 1.2em;
     }
-
+    
     .pergunta p {
         font-size: 0.9em;
+    }
+    
+    footer {
+        position: relative;
+        max-height: none;
+        margin-bottom: -100px;
+    }
+
+    footer .footer-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    footer .left-section,
+    footer .brands-section,
+    footer .newsletter {
+        align-items: center;
+        text-align: center;
+    }
+
+    footer .footer-links {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    footer .brands-logos {
+        gap: 10px;
     }
 
     footer .newsletter input[type="email"] {
         width: 100%;
-    }
-
+    }  
+    
     footer .newsletter button {
         width: 100%;
     }
+    
+    .produto {
+        flex: 0 0 100%; 
+    }
+    
+    .carrossel-btn {
+        display: block; 
+    }
 }
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+
