--- a/css/fale-conosco.css
+++ b/css/fale-conosco.css
@@ -9,10 +9,8 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
     line-height: 1.6;
-    color: #333;
-    background-image: url(img/banner.png);
+    color: #333;    
 }
 
 header {
@@ -33,7 +31,6 @@ header {
     align-items: center;
 }
 
-
 #carrinho-btn {
     display: flex;
     align-items: center;
@@ -49,45 +46,10 @@ header {
     color: #ffcc00;
 }
 
-nav ul {
-    list-style: none;
+nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin: 0;
-}
-
-nav ul li {
-    margin: 0 10px;
-    position: relative;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    padding: 10px 20px;
-    transition: background-color 0.3s ease-in-out;
-    border-radius: 5px;
-}
-
-nav ul li a:hover {
-    background-color: #555;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    padding: 10px;
-    top: 100%;
-    left: 0;
-    z-index: 1000;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
 }
 
 .menu-icon {
@@ -96,24 +58,37 @@ nav ul li a:hover {
     cursor: pointer;
 }
 
-@media (max-width: 768px) {
-    .menu-icon {
-        display: block;
-    }
+#nav-menu {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
 
-    nav ul {
-        display: none;
-        flex-direction: column;
-    }
+#nav-menu li a {
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    transition: background-color 0.3s;
+}
 
-    nav ul.active {
-        display: flex;
-    }
+#nav-menu li a:hover {
+    background-color: #555;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 .fale-conosco {
     padding: 20px;
-    background-image: url(img/banner.png);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 20px;
@@ -127,6 +102,15 @@ nav ul li a:hover {
 .fale-conosco p {
     margin-bottom: 20px;
     text-align: center;
+}
+
+.form-contato{
+    opacity: 0.8;
+}
+
+.form-text{
+    background-color: #000000;
+    color: #e0e0e0;
 }
 
 form {
@@ -343,35 +327,6 @@ footer .newsletter button:hover {
     transform: translateY(-2px);
 }
 
-/* Responsividade */
-@media (max-width: 768px) {
-    footer .footer-container {
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-    }
-
-    footer .left-section,
-    footer .brands-section,
-    footer .newsletter {
-        align-items: center;
-        text-align: center;
-    }
-
-    footer .footer-links {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    footer .brands-logos {
-        gap: 10px;
-    }
-
-    footer .newsletter input[type="email"] {
-        width: 100%;
-    }
-}
-
 .ps {
     color: #e6b800;
 }
@@ -399,7 +354,6 @@ footer .newsletter button:hover {
 }
 
 .modal-content {
-    background-image: url(img/banner.png);
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -409,23 +363,15 @@ footer .newsletter button:hover {
     animation: fadeIn 0.3s ease-in-out;
 }
 
+main {
+    margin-bottom: 180px;
+}
+
 .p {
-    background-color: #f5f5f5;
+    background-color: #ffcc00;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(-20px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
 }
 
 .close {
@@ -508,7 +454,6 @@ footer .newsletter button:hover {
     border-color: #000000;
 }
 
-
 .tab-content input:focus {
     border-color: #333;
     box-shadow: 0 0 5px rgba(51, 51, 51, 0.3);
@@ -541,20 +486,133 @@ footer .newsletter button:hover {
     margin-bottom: 20px;
 }
 
-
 .tab-content input::placeholder {
     color: #999;
     font-style: italic;
 }
 
-
-
 .tab-content input:valid {
     border-color: #4CAF50;
 }
 
-/* Responsividade para o modal */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+
+.close:hover,
+.close:focus {
+    color: #333;
+}
+
+footer .footer-links a:hover {
+    color: #ffcc00;
+    transform: translateY(-2px);
+}
+
+footer .social-media-links a:hover {
+    color: #ffcc00;
+    transform: translateY(-2px);
+}
+
+footer .newsletter button:hover {
+    background-color: #e6b800;
+    transform: translateY(-2px);
+}
+
+/*Responsividade*/
 @media (max-width: 768px) {
+    .menu-icon {
+        display: block;
+    }
+
+    #nav-menu {
+        display: none;
+        flex-direction: column;
+        background-color: #333;
+        width: 100%;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    nav ul li {
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    #nav-menu.active {
+        display: flex;
+    }
+
+    .dropdown-content {
+        position: static;
+        background-color: transparent;
+    }
+
+    .logo-img {
+        display: flex;
+        width: 60%;
+        margin-left: 36px;        
+    }
+    
+    .faq {
+        margin: 10px;
+        margin-bottom: 150px;
+    }
+
+    .pergunta h2 {
+        font-size: 1.2em;
+    }
+
+    .pergunta p {
+        font-size: 0.9em;
+    }
+
+    .main {
+        margin-bottom: -20px;
+    }
+    
+    footer {
+        position: relative;
+        max-height: none;
+    }
+
+    footer .footer-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    footer .left-section,
+    footer .brands-section,
+    footer .newsletter {
+        align-items: center;
+        text-align: center;
+    }
+
+    footer .footer-links {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    footer .brands-logos {
+        gap: 10px;
+    }
+
+    footer .newsletter input[type="email"] {
+        width: 100%;
+    }
+
+    footer .newsletter button {
+        width: 100%;
+    }
+
     .modal-content {
         width: 95%;
         padding: 20px;
@@ -578,65 +636,19 @@ footer .newsletter button:hover {
         padding: 8px 16px;
         font-size: 0.9em;
     }
+
 }
 
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: color 0.3s ease;
-}
-
-.close:hover,
-.close:focus {
-    color: #333;
-}
-
-
-footer .footer-links a:hover {
-    color: #ffcc00;
-    transform: translateY(-2px);
-}
-
-
-footer .social-media-links a:hover {
-    color: #ffcc00;
-    transform: translateY(-2px);
-}
-
-
-footer .newsletter button:hover {
-    background-color: #e6b800;
-    transform: translateY(-2px);
-}
-
-/* Ajustes para dispositivos móveis */
-@media (max-width: 480px) {
-    .faq {
-        margin: 10px;
-        margin-bottom: 150px;
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
     }
 
-    .pergunta h2 {
-        font-size: 1.2em;
-    }
-
-    .pergunta p {
-        font-size: 0.9em;
-    }
-
-    footer .newsletter input[type="email"] {
-        width: 100%;
-    }
-
-    footer .newsletter button {
-        width: 100%;
+    to {
+        opacity: 1;
+        transform: translateY(0);
     }
 }
 
-main {
-    margin-bottom: 180px;
-}
+
