--- a/css/faq.css
+++ b/css/faq.css
@@ -9,10 +9,8 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
     line-height: 1.6;
     color: #333;
-    background-image: url(img/banner.png);
 }
 
 header {
@@ -32,7 +30,6 @@ header {
     margin-right: -250px;
     align-items: center;
 }
-
 
 #carrinho-btn {
     display: flex;
@@ -96,24 +93,9 @@ nav ul li a:hover {
     cursor: pointer;
 }
 
-@media (max-width: 768px) {
-    .menu-icon {
-        display: block;
-    }
-
-    nav ul {
-        display: none;
-        flex-direction: column;
-    }
-
-    nav ul.active {
-        display: flex;
-    }
-}
-
 .faq {
     padding: 20px;
-    background-image: url(img/banner.png);
+    background-color: rgba(255, 255, 255, 0.9);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 20px;
@@ -123,6 +105,7 @@ nav ul li a:hover {
 .faq h1 {
     margin-bottom: 20px;
     text-align: center;
+    font-size: 2em;
 }
 
 .pergunta {
@@ -134,6 +117,7 @@ nav ul li a:hover {
     color: white;
     padding: 10px;
     border-radius: 5px;
+    font-size: 1.2em;
 }
 
 .pergunta p {
@@ -141,6 +125,7 @@ nav ul li a:hover {
     background-color: #f5f5f5;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 1em;
 }
 
 footer {
@@ -223,7 +208,6 @@ footer .social-media-links a:hover {
     transform: translateY(-2px);
 }
 
-
 footer .brands-section {
     display: flex;
     flex-direction: column;
@@ -300,8 +284,171 @@ footer .newsletter button:hover {
     transform: translateY(-2px);
 }
 
-/* Responsividade */
+.ps {
+    color: #ffcc00;
+}
+
+.pf {
+    margin-top: 14px;
+}
+
+.qf {
+    margin-bottom: 10px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 90%;
+    max-width: 400px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    animation: fadeIn 0.3s ease-in-out;
+}
+
+.close {
+    float: right;
+    font-size: 24px;
+    cursor: pointer;
+    color: #aaa;
+    transition: color 0.3s ease;
+}
+
+.close:hover {
+    color: #333;
+}
+
+.modal-content h2 {
+    margin-bottom: 20px;
+    color: #333;
+    font-size: 1.5em;
+}
+
+.modal-content form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.modal-content label {
+    font-size: 1em;
+    color: #555;
+    font-weight: 500;
+}
+
+.modal-content input {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 1em;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.modal-content input:focus {
+    border-color: #333;
+    box-shadow: 0 0 5px rgba(51, 51, 51, 0.3);
+    outline: none;
+}
+
+.modal-content button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #333;
+    color: white;
+    font-size: 1em;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.modal-content button:hover {
+    background-color: #555;
+    transform: translateY(-2px);
+}
+
+.compras {
+    margin-bottom: 100px;
+}
+
+
 @media (max-width: 768px) {
+    .menu-icon {
+        display: block;
+    }
+
+    nav ul {
+        display: none;
+        flex-direction: column;
+        background-color: #333;
+        width: 100%;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    nav ul li {
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    nav ul.active {
+        display: flex;
+    }
+
+    .dropdown-content {
+        position: relative;
+        top: 0;
+        left: 0;
+        box-shadow: none;
+    }
+
+    .logo-img {
+        display: flex;
+        width: 60%;
+        margin-left: 36px;
+    }
+
+    .faq {
+        margin: 10px;
+        margin-bottom: 150px;
+    }
+
+    .pergunta h2 {
+        font-size: 1.2em;
+    }
+
+    .pergunta p {
+        font-size: 0.9em;
+    }
+
+    .modal-content {
+        padding: 15px;
+    }
+
+    footer {
+        position: relative;
+        max-height: none;
+    }
+
+    .main {
+        margin-bottom: -120px;
+    }
+
     footer .footer-container {
         flex-direction: column;
         align-items: center;
@@ -329,48 +476,6 @@ footer .newsletter button:hover {
     }
 }
 
-.ps {
-    color: #e6b800;
-}
-
-.pf {
-    margin-top: 14px;
-}
-
-.qf {
-    margin-bottom: 10px;
-}
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1001;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-    backdrop-filter: blur(5px);
-}
-
-.tab-content input:invalid {
-    border-color: #000000;
-}
-
-
-.modal-content {
-    background-image: url(img/banner.png);
-    padding: 30px;
-    border-radius: 15px;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    width: 90%;
-    max-width: 400px;
-    text-align: center;
-    animation: fadeIn 0.3s ease-in-out;
-}
-
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -380,209 +485,5 @@ footer .newsletter button:hover {
     to {
         opacity: 1;
         transform: translateY(0);
-    }
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: color 0.3s ease;
-}
-
-.close:hover,
-.close:focus {
-    color: #333;
-}
-
-.tabs {
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 20px;
-}
-
-.tab-link {
-    background-color: transparent;
-    color: #333;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    border: none;
-    font-size: 1.1em;
-    font-weight: 600;
-}
-
-.tab-link.active {
-    background-color: #333;
-    color: white;
-}
-
-.tab-link:hover {
-    background-color: #f0f0f0;
-}
-
-.tab-content {
-    display: none;
-    text-align: left;
-}
-
-.tab-content.active {
-    display: block;
-}
-
-.tab-content h2 {
-    margin-bottom: 20px;
-    font-size: 1.5em;
-    color: #333;
-}
-
-.tab-content form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-.tab-content label {
-    font-size: 1em;
-    color: #555;
-    font-weight: 500;
-}
-
-.tab-content input {
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 1em;
-    transition: border-color 0.3s ease, box-shadow 0.3s ease;
-}
-
-.tab-content input:focus {
-    border-color: #333;
-    box-shadow: 0 0 5px rgba(51, 51, 51, 0.3);
-    outline: none;
-}
-
-.tab-content button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #333;
-    color: white;
-    font-size: 1em;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.tab-content button:hover {
-    background-color: #555;
-    transform: translateY(-2px);
-}
-
-.h2a {
-    background-color: #ffcc00;
-    text-align: center;
-    padding: 10px;
-    border-radius: 5px;
-    color: #333;
-    margin-bottom: 20px;
-}
-
-
-.tab-content input::placeholder {
-    color: #999;
-    font-style: italic;
-}
-
-
-
-.tab-content input:valid {
-    border-color: #4CAF50;
-}
-
-/* Responsividade para o modal */
-@media (max-width: 768px) {
-    .modal-content {
-        width: 95%;
-        padding: 20px;
-    }
-
-    .tab-link {
-        padding: 8px 16px;
-        font-size: 1em;
-    }
-
-    .tab-content h2 {
-        font-size: 1.3em;
-    }
-
-    .tab-content input {
-        padding: 8px;
-        font-size: 0.9em;
-    }
-
-    .tab-content button {
-        padding: 8px 16px;
-        font-size: 0.9em;
-    }
-}
-
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-    transition: color 0.3s ease;
-}
-
-.close:hover,
-.close:focus {
-    color: #333;
-}
-
-
-footer .footer-links a:hover {
-    color: #ffcc00;
-    transform: translateY(-2px);
-}
-
-
-footer .social-media-links a:hover {
-    color: #ffcc00;
-    transform: translateY(-2px);
-}
-
-
-footer .newsletter button:hover {
-    background-color: #e6b800;
-    transform: translateY(-2px);
-}
-
-
-@media (max-width: 480px) {
-    .faq {
-        margin: 10px;
-        margin-bottom: 150px;
-    }
-
-    .pergunta h2 {
-        font-size: 1.2em;
-    }
-
-    .pergunta p {
-        font-size: 0.9em;
-    }
-
-    footer .newsletter input[type="email"] {
-        width: 100%;
-    }
-
-    footer .newsletter button {
-        width: 100%;
     }
 }
