--- a/css/produtos.css
+++ b/css/produtos.css
@@ -9,7 +9,6 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-image: url(img/banner.png);
     line-height: 1.6;
     color: #333;
     padding-bottom: 80px;
@@ -26,7 +25,6 @@ header {
 }
 
 .banner {
-    background: url('img/banner.png') repeat center center/contain;
     margin-top: -95px;
     margin-bottom: -95px;
     color: white;
@@ -58,7 +56,6 @@ header {
     margin-right: -250px;
     align-items: center;
 }
-
 
 #carrinho-btn {
     display: flex;
@@ -120,38 +117,7 @@ nav ul li a:hover {
     display: none;
     font-size: 24px;
     cursor: pointer;
-}
-
-@media (max-width: 768px) {
-    .menu-icon {
-        display: block;
-    }
-
-    nav ul {
-        display: none;
-        flex-direction: column;
-        background-color: #333;
-        width: 100%;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    }
-
-    nav ul li {
-        text-align: center;
-    }
-
-    nav ul.active {
-        display: flex;
-    }
-
-    .dropdown-content {
-        position: relative;
-        top: 0;
-        left: 0;
-        box-shadow: none;
-    }
+    
 }
 
 .produtos {
@@ -202,11 +168,10 @@ nav ul li a:hover {
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 10px;
     background-color: white;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     text-align: center;
-
 }
 
 .produto img {
@@ -215,7 +180,6 @@ nav ul li a:hover {
     object-fit: contain;
     border-radius: 10px;
     margin-bottom: 10px;
-    background-image: url(img/banner.png);
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -332,7 +296,6 @@ footer .social-media-links a:hover {
     transform: translateY(-2px);
 }
 
-
 footer .brands-section {
     display: flex;
     flex-direction: column;
@@ -409,35 +372,6 @@ footer .newsletter button:hover {
     transform: translateY(-2px);
 }
 
-/* Responsividade */
-@media (max-width: 768px) {
-    footer .footer-container {
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-    }
-
-    footer .left-section,
-    footer .brands-section,
-    footer .newsletter {
-        align-items: center;
-        text-align: center;
-    }
-
-    footer .footer-links {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    footer .brands-logos {
-        gap: 10px;
-    }
-
-    footer .newsletter input[type="email"] {
-        width: 100%;
-    }
-}
-
 .pf {
     margin-top: 14px;
 }
@@ -461,7 +395,6 @@ footer .newsletter button:hover {
 }
 
 .modal-content {
-    background-image: url(img/banner.png);
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -469,18 +402,6 @@ footer .newsletter button:hover {
     max-width: 400px;
     text-align: center;
     animation: fadeIn 0.3s ease-in-out;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(-20px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
 }
 
 .close {
@@ -563,7 +484,6 @@ footer .newsletter button:hover {
     border-color: #000000;
 }
 
-
 .tab-content input:focus {
     border-color: #333;
     box-shadow: 0 0 5px rgba(51, 51, 51, 0.3);
@@ -594,4 +514,93 @@ footer .newsletter button:hover {
     border-radius: 5px;
     color: #333;
     margin-bottom: 20px;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+    .menu-icon {
+        display: block;
+    }
+
+    nav ul {
+        display: none;
+        flex-direction: column;
+        background-color: #333;
+        width: 100%;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    nav ul li {
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    nav ul.active {
+        display: flex;
+    }
+
+    .dropdown-content {
+        position: relative;
+        top: 0;
+        left: 0;
+        box-shadow: none;
+    }
+
+    .logo-img {
+        display: flex;
+        width: 60%;
+        margin-left: 36px;
+    }
+
+    .produto {
+        flex: 1 1 calc(50% - 20px);
+        max-width: calc(50% - 20px);
+    }
+
+    footer {
+        position: relative;
+        max-height: none;
+        margin-bottom: -100px;
+    }
+
+    footer .footer-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    footer .left-section,
+    footer .brands-section,
+    footer .newsletter {
+        align-items: center;
+        text-align: center;
+    }
+
+    footer .footer-links {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    footer .brands-logos {
+        gap: 10px;
+    }
+
+    footer .newsletter input[type="email"] {
+        width: 100%;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
