--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
     line-height: 1.6;
     color: #333;
     padding-bottom: 80px;
@@ -32,7 +31,6 @@ header {
     margin-right: -250px;
     align-items: center;
 }
-
 
 #carrinho-btn {
     display: flex;
@@ -96,40 +94,7 @@ nav ul li a:hover {
     cursor: pointer;
 }
 
-@media (max-width: 768px) {
-    .menu-icon {
-        display: block;
-    }
-
-    nav ul {
-        display: none;
-        flex-direction: column;
-        background-color: #333;
-        width: 100%;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    }
-
-    nav ul li {
-        text-align: center;
-    }
-
-    nav ul.active {
-        display: flex;
-    }
-
-    .dropdown-content {
-        position: relative;
-        top: 0;
-        left: 0;
-        box-shadow: none;
-    }
-}
-
-.banner {
-    background: url('../img/banner.png') repeat center center/contain;
+.banner {    
     margin-top: -95px;
     margin-bottom: -95px;
     color: white;
@@ -165,53 +130,25 @@ nav ul li a:hover {
 
 .carrossel-container {
     position: relative;
-    background-image: url('../img/banner.png');
+    overflow: hidden;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .carrossel {
     display: flex;
-    overflow: hidden;
+    transition: transform 0.5s ease-in-out;
 }
 
 .produtos-container {
     display: flex;
-    transition: transform 0.5s ease-in-out;
-}
-
-
-.carrossel-btn {
-    position: absolute;
-    top: 40%;
-    transform: translateY(-50%);
-    background-color: #333;
-    color: white;
-    border: none;
-    padding: 15px;
-    cursor: pointer;
-    border-radius: 50%;
-    z-index: 1;
-    font-size: 0.8em;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.carrossel-btn:hover {
-    background-color: #555;
-    transform: translateY(-50%) scale(1.1);
-}
-
-.prev-btn {
-    left: -5px;
-}
-
-.next-btn {
-    right: -5px;
+    gap: 20px;
+    padding: 10px;
+    width: 100%;
 }
 
 .produto {
-    flex: 0 0 calc(30% - 0px);
-    margin: 10px;
-    margin-bottom: 100px;
-    margin-left: 42px;
+    flex: 0 0 calc(33.33% - 20px);
     box-sizing: border-box;
     border: 1px solid #ddd;
     border-radius: 10px;
@@ -220,7 +157,7 @@ nav ul li a:hover {
     background-color: white;
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     text-align: center;
-    align-items: center;
+    margin-right: 15px;
 }
 
 .produto img {
@@ -229,7 +166,6 @@ nav ul li a:hover {
     object-fit: contain;
     border-radius: 10px;
     margin-bottom: 10px;
-    background-image: url('../img/banner.png');
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -264,6 +200,34 @@ nav ul li a:hover {
 .produto:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.carrossel-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #333;
+    color: white;
+    border: none;
+    padding: 15px;
+    cursor: pointer;
+    border-radius: 50%;
+    z-index: 1;
+    font-size: 0.8em;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.carrossel-btn:hover {
+    background-color: #555;
+    transform: translateY(-50%) scale(1.1);
+}
+
+.prev-btn {
+    left: 10px;
+}
+
+.next-btn {
+    right: 10px;
 }
 
 footer {
@@ -346,7 +310,6 @@ footer .social-media-links a:hover {
     transform: translateY(-2px);
 }
 
-
 footer .brands-section {
     display: flex;
     flex-direction: column;
@@ -423,35 +386,6 @@ footer .newsletter button:hover {
     transform: translateY(-2px);
 }
 
-/* Responsividade */
-@media (max-width: 768px) {
-    footer .footer-container {
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
-    }
-
-    footer .left-section,
-    footer .brands-section,
-    footer .newsletter {
-        align-items: center;
-        text-align: center;
-    }
-
-    footer .footer-links {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    footer .brands-logos {
-        gap: 10px;
-    }
-
-    footer .newsletter input[type="email"] {
-        width: 100%;
-    }
-}
-
 .ps {
     color: #ffcc00;
 }
@@ -479,7 +413,6 @@ footer .newsletter button:hover {
 }
 
 .modal-content {
-    background-image: url('../img/banner.png');
     padding: 30px;
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -487,18 +420,6 @@ footer .newsletter button:hover {
     max-width: 400px;
     text-align: center;
     animation: fadeIn 0.3s ease-in-out;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(-20px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
 }
 
 .close {
@@ -607,4 +528,108 @@ footer .newsletter button:hover {
 .h2a {
     background-color: #ffcc00;
     text-align: center;
+    padding: 10px;
+    border-radius: 5px;
+    color: #333;
+    margin-bottom: 20px;
+}   
+
+
+
+@media (max-width: 768px) {
+    .menu-icon {
+        display: block;
+    }
+
+    nav ul {
+        display: none;
+        flex-direction: column;
+        background-color: #333;
+        width: 100%;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    nav ul li {
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    nav ul.active {
+        display: flex;
+    }
+
+    .dropdown-content {
+        position: relative;
+        top: 0;
+        left: 0;
+        box-shadow: none;
+    }
+
+    .logo-img {
+        display: flex;
+        width: 60%;
+        margin-left: 36px;        
+    }
+
+    footer {
+        position: relative;
+        max-height: none;
+    }
+
+    .footer-end {
+        margin-bottom: -100px;
+    } 
+
+    footer .footer-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 0px;
+    }
+
+    footer .left-section,
+    footer .brands-section,
+    footer .newsletter {
+        align-items: center;
+        text-align: center;
+    }
+
+    footer .footer-links {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    footer .brands-logos {
+        gap: 10px;
+    }
+
+    footer .newsletter input[type="email"] {
+        width: 100%;
+    }
+
+    @media (max-width: 768px) {
+        .produto {
+            flex: 0 0 100%; 
+            margin-right: 0; 
+        }
+    
+        .carrossel-btn {
+            display: block; 
+        }
+    }
+
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
